# Wansui

./: README.md  ja_buttons.py
KB0/: Ballistic.ops
config/: VIPs.txt  Wansui_vals.ini  misheard.map
doc/: hardware.md  software.md
hmore_face/config/: face_params.yaml
jet_files/: .bashrc  .display.sh  .jetautorc  .typerc  startup_snd.sh
jet_files/etc_pulse/: daemon.conf  default.pa  system.pa
jet_files/etc_systemd_system/: ja_buttons.service
jet_files/jetauto_ws_src/jetauto_bringup/launch/: bringup.launch
jet_files/jetauto_ws_src/jetauto_bringup/scripts/: source_env.bash
jet_files/jetauto_ws_src/jetauto_driver/hiwonder_servo/hiwonder_servo_controllers/config/: hiwonder_servo_controller.yaml
jet_files/jetauto_ws_src/jetauto_driver/hiwonder_servo/hiwonder_servo_controllers/scripts/: joint_state_publisher.py
jet_files/jetauto_ws_src/jetauto_driver/jetauto_sdk/src/jetauto_sdk/: mecanum.py
jet_files/jetauto_ws_src/jetauto_example/scripts/jetauto_adapter_example/serial_servo/: set_serial_servo_status.py
jet_files/jetauto_ws_src/jetauto_slam/src/: init_pose.py
jet_files/usr_local_bin/: connect  demo  wifi-stats
wansui_act/: CMakeLists.txt  package.xml
wansui_act/include/: jhcAzureReco.h  jhcPlanarArm.h  jhcWansuiAct.h
wansui_act/launch/: battery_mon.launch  wansui_act.launch
wansui_act/src/: jhcAzureReco.cpp  jhcPlanarArm.cpp  jhcWansuiAct.cpp
wansui_vis/launch/: battery_mon.launch  dir_mic.launch  wansui_vis.launch
wansui_vis/scripts/: battery_mon.py  dir_mic.py
